# traincraft

./: .gitignore  CNT_generation.py  DESIGN.md  LICENSE  README.md  ROADMAP.md  cnt_generator.toml  config.py  mkdocs.yml  params.py  pyproject.toml  requirements.txt  requirements_pip.txt  toolkit.py
.github/workflows/: ci.yml  docs.yml
containers/: README.md  traincraft-core.def  traincraft-dft-mkl.def  traincraft-dft.def  traincraft-mlip.def  traincraft-qe.def
docs/: index.md  phase1_chunk1_spec.md  roadmap.md
docs/concepts/: architecture.md  calculators.md  fragments.md  geometry.md  index.md  provenance.md  selection.md  training.md
docs/getting-started/: end-to-end.md  index.md  installation.md  quickstart.md
docs/how-to/: custom-builder.md  custom-sampler.md  datasets.md  hpc-leonardo.md  hpc.md  index.md  own-mace-model.md
docs/reference/: api.md  cli.md  config.md  index.md
docs/stylesheets/: extra.css
docs/tutorials/: 01-first-dataset.md  02-molecules.md  03-surfaces.md  04-crystals-defects.md  05-slabs-strain.md  06-2d-materials.md  07-mace-mp0.md  08-selection-funnel.md  09-interop.md  10-training.md  11-ai-agent.md  index.md
examples/: 01_cnt_emt_md.toml  02_molecule_emt_rattle.toml  03_molecule_from_file.toml  04_nanotube_supercell_rattle.toml  05_selection_funnel_demo.toml  06_mace_mp0_sampling.toml  07_co_on_cu_mc.toml  08_smiles_molecule.toml  09_packing_on_surface.toml  10_ethanol_conformers_on_cu.toml  11_butane_conformers_on_cu.toml  12_bulk_vacancy_md.toml  13_slab_strain_md.toml  14_graphene_bilayer_md.toml  15_h_graphite_intercalation.toml  16_slab_constraints_md.toml  17_water_box_liquid.toml  18_label_after_select.toml  19_hpc_leonardo_label.toml  20_hpc_lumi_native.toml  21_train_mace_finetune.toml  22_filled_nanotube.toml  23_solvent_mixture.toml  24_cuau_alloy_md.toml  25_pes_scan.toml  walking_skeleton.toml
examples/assets/: h2o.xyz
inputs/: cnt_generator.toml
scripts/: qe2extxyz.py  qe2tadah.py
skills/traincraft/: SKILL.md
skills/traincraft-deploy/: SKILL.md
src/: config.py  connect_database.py  database.py  dirman.py  fillmytubes.py  geomgen.py  output_files.txt  params.py  qe2extxyz.py  toolkit.py  transformer.py
src/traincraft/: __init__.py  __main__.py  calculeitors.py  cli.py  converter.py  gengeom.py  labeling.py  params.py  samplers.py  toolkit.py  traincraft.py  utils.py
src/traincraft/calculators/: __init__.py  base.py  dft.py  potentials.py
src/traincraft/config/: __init__.py  loader.py  models.py
src/traincraft/core/: __init__.py  converter.py  fragments.py  provenance.py  registry.py  results.py  rng.py  structure.py  workspace.py
src/traincraft/datasets/: __init__.py  dataset.py  io.py
src/traincraft/geometry/: __init__.py
src/traincraft/geometry/builders/: __init__.py  _adsorbate.py  _common.py  alloy.py  crystal.py  filled_nanotube.py  intercalation.py  layered.py  liquid.py  mixture.py  molecule.py  nanotube.py  slab.py  surface.py
src/traincraft/geometry/sources/: __init__.py  file.py  providers.py  scratch.py  smiles.py  url.py
src/traincraft/geometry/transforms/: __init__.py  constraints.py  perturb.py  rotate.py  set_pbc.py  strain.py  supercell.py  vacuum.py
src/traincraft/inputs/: default_config.toml  reference_input.toml
src/traincraft/orchestration/: __init__.py  local.py  slurm.py  stages.py
src/traincraft/sampling/: __init__.py  base.py  md.py  monte_carlo.py  rattle.py  scan.py
src/traincraft/selection/: __init__.py  base.py  dedup.py  diversity.py  physicality.py
src/traincraft/training/: __init__.py  base.py  mace.py
tests/: test_cluster_profiles.py  test_config.py  test_conformer_integrity.py  test_constraints.py  test_converter.py  test_crystal_builder.py  test_dft.py  test_e2e.py  test_filled_nanotube.py  test_fragments.py  test_geometry.py  test_intercalation_builder.py  test_labeling.py  test_layered_builder.py  test_liquid_builder.py  test_mc_sampler.py  test_mixtures.py  test_providers.py  test_registry.py  test_scan_sampler.py  test_selection.py  test_slab_builder.py  test_slurm_executor.py  test_smiles_source.py  test_stages.py  test_structure.py  test_surface_builders.py  test_training.py  test_transforms.py  test_url_source.py  test_workspace.py
traincraft/: .pylintrc  calculeitors.py  config.py  dirman.py  gengeom.py  params.py  samplers.py  toolkit.py  traincraft.py  transformer.py
traincraft/inputs/: input_reference.toml  minimum_input.toml  reference_input.toml
