[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traincraft"
version = "0.1.0"
description = "Modular generation of training datasets for, and training of, ML interatomic potentials (MACE-centric) with an active-learning loop."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "David Abbasi Perez" }]
dependencies = [
    "ase>=3.22",
    "numpy>=1.23",
    "pydantic>=2.5",
    "typer>=0.12",
    "tomlkit>=0.12",
]

[project.optional-dependencies]
# Install individually: pip install -e ".[mace]", pip install -e ".[sampling]", etc.
mace        = ["mace-torch", "torch"]
geometry    = ["rdkit", "pymatgen", "MDAnalysis", "mdapackmol-fmt"]
pysoftk     = ["pysoftk"]          # separate: polymer builder; install from PyPI/GitHub
descriptors = ["dscribe"]
sampling    = ["hiphive"]
semiempirical = ["tblite"]
dev         = ["pytest>=7", "ruff>=0.5", "mypy>=1.8"]
docs        = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[project.scripts]
traincraft = "traincraft.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Pixi: primary environment manager (mixes conda-forge + PyPI in one lockfile).
# conda-forge provides packmol / hiphive / tblite / DFT tooling.
# PyPI provides mace-torch, mdapackmol-fmt, dscribe, etc.
#
# Usage:
#   pixi install               # default env (core deps only)
#   pixi install -e dev        # + pytest / ruff / mypy
#   pixi install -e science    # + sampling + semiempirical + descriptors
#   pixi install -e mace       # + mace-torch (needs CUDA/CPU torch)
#   pixi run test              # run tests inside the dev env
#   pixi run -e science slice  # run the walking-skeleton example
# ---------------------------------------------------------------------------
[tool.pixi.workspace]
channels  = ["conda-forge"]
platforms = ["linux-64"]

# Core deps (present in every environment) --------------------------------
[tool.pixi.dependencies]
python   = ">=3.10,<3.13"   # pin below 3.13 for broadest conda-forge coverage
ase      = ">=3.22"
numpy    = ">=1.23"
pydantic = ">=2.5"
typer    = ">=0.12"
tomlkit  = ">=0.12"

[tool.pixi.pypi-dependencies]
traincraft = { path = ".", editable = true }

# dev feature --------------------------------------------------------------
[tool.pixi.feature.dev.dependencies]
pytest = ">=7"
ruff   = ">=0.5"
mypy   = ">=1.8"

# sampling feature (HiPhive rattle) ----------------------------------------
# hiphive is on conda-forge only up to Python 3.11; use PyPI for 3.12+.
[tool.pixi.feature.sampling.pypi-dependencies]
hiphive = "*"

# semiempirical feature (tblite / GFN-xTB) ---------------------------------
[tool.pixi.feature.semiempirical.dependencies]
tblite        = "*"
tblite-python = "*"

# geometry feature (Packmol + rdkit + pymatgen + MDAnalysis) ---------------
[tool.pixi.feature.geometry.dependencies]
packmol    = "*"
rdkit      = "*"
pymatgen   = "*"
mdanalysis = "*"

[tool.pixi.feature.geometry.pypi-dependencies]
mdapackmol-fmt = "*"
# pysoftk is listed separately; install manually if needed:
#   pixi run pip install pysoftk
# (not in PyPI index resolution until package name is confirmed)

# descriptors feature (SOAP / ACE for near-dup selection) ------------------
[tool.pixi.feature.descriptors.pypi-dependencies]
dscribe = "*"

# docs feature (MkDocs + Material + mkdocstrings) --------------------------
[tool.pixi.feature.docs.pypi-dependencies]
mkdocs-material   = ">=9.5"
mkdocstrings      = {version = ">=0.25", extras = ["python"]}
ruff              = ">=0.5"

# mace feature (heavy: requires torch) ------------------------------------
# Not included in 'science' by default; activate explicitly:
#   pixi install -e mace
[tool.pixi.feature.mace.pypi-dependencies]
mace-torch = "*"
torch      = "*"

# Environments -------------------------------------------------------------
[tool.pixi.environments]
default = { solve-group = "default" }
dev     = { features = ["dev"],                                    solve-group = "default" }
science = { features = ["dev", "sampling", "semiempirical", "geometry", "descriptors"] }
mace    = { features = ["dev", "mace"] }
docs    = { features = ["docs"] }

# Tasks --------------------------------------------------------------------
# Run these from the repo root.  Use -e <env> to pick the environment:
#   pixi run test                        # uses 'default' env
#   pixi run -e dev test                 # uses 'dev' env
#   pixi run -e science example-02       # needs science env (hiphive / tblite)
#   pixi run -e mace example-06          # needs mace env (torch + mace-torch)
[tool.pixi.tasks]
test       = { cmd = "pytest -q",                                           description = "Run the test suite" }
lint       = { cmd = "ruff check .",                                        description = "Lint with ruff" }
fmt        = { cmd = "ruff format .",                                       description = "Format with ruff" }
example-01 = { cmd = "traincraft run examples/01_cnt_emt_md.toml",         description = "CNT + EMT + MD (no extra deps)" }
example-02 = { cmd = "traincraft run examples/02_molecule_emt_rattle.toml",description = "Molecule + rattle (needs science env)" }
example-03 = { cmd = "traincraft run examples/03_molecule_from_file.toml", description = "Load from file + MD (no extra deps)" }
example-04 = { cmd = "traincraft run examples/04_nanotube_supercell_rattle.toml", description = "Supercell + rattle (needs science env)" }
example-05 = { cmd = "traincraft run examples/05_selection_funnel_demo.toml", description = "Funnel demo (no extra deps)" }
example-06 = { cmd = "traincraft run examples/06_mace_mp0_sampling.toml",  description = "MACE-MP0 sampling (needs mace env)" }
example-07 = { cmd = "traincraft run examples/07_co_on_cu_mc.toml",        description = "CO on Cu(111) + MC sampler (no extra deps)" }
example-08 = { cmd = "traincraft run examples/08_smiles_molecule.toml",    description = "SMILES source + MD (needs science env)" }
example-09 = { cmd = "traincraft run examples/09_packing_on_surface.toml", description = "Packmol surface packing + MC (needs science env)" }
example-10 = { cmd = "traincraft run examples/10_ethanol_conformers_on_cu.toml", description = "Ethanol conformers on Cu(111) via MC (needs science env)" }
example-11 = { cmd = "traincraft run examples/11_butane_conformers_on_cu.toml", description = "Butane gauche/anti landscape on Cu(111) via MC + Packmol (needs science env)" }
example-12 = { cmd = "traincraft run examples/12_bulk_vacancy_md.toml",     description = "Bulk Cu crystal + vacancy defect + MD (no extra deps)" }
example-13 = { cmd = "traincraft run examples/13_slab_strain_md.toml",      description = "Cu(111) slab + biaxial strain + MD (no extra deps)" }
example-14 = { cmd = "traincraft run examples/14_graphene_bilayer_md.toml", description = "AB graphene bilayer (layered builder) + MD (no extra deps)" }
example-15 = { cmd = "traincraft run examples/15_h_graphite_intercalation.toml", description = "H intercalated in graphite (intercalation builder) + MD (no extra deps)" }
example-16 = { cmd = "traincraft run examples/16_slab_constraints_md.toml", description = "Cu(111) slab + frozen bottom layer (constraints) + MD (no extra deps)" }
example-17 = { cmd = "traincraft run examples/17_water_box_liquid.toml", description = "Packmol water box (liquid builder) + xTB MD (needs science env)" }
example-18 = { cmd = "traincraft run examples/18_label_after_select.toml", description = "Build->sample->select->LABEL (DFT labeling stage; EMT stand-in, no extra deps)" }
example-21 = { cmd = "traincraft run examples/21_train_mace_finetune.toml", description = "Build->...->dataset->TRAIN a MACE foundation model (needs mace env)" }
example-22 = { cmd = "traincraft run examples/22_filled_nanotube.toml", description = "CNT randomly filled with water (filled_nanotube builder) + xTB MD (needs science env)" }

# Docs tasks live on the `docs` feature so they only exist in the `docs`
# environment — `pixi run docs-serve` then auto-selects that env (no `-e docs`).
[tool.pixi.feature.docs.tasks]
docs-serve = { cmd = "mkdocs serve",          description = "Serve docs locally with live reload" }
docs-build = { cmd = "mkdocs build --strict", description = "Build docs to site/" }

# ---------------------------------------------------------------------------
# Tooling config
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py310"
src            = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
# Typer's documented idiom puts Argument()/Option() in parameter defaults.
"src/traincraft/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-q"

[tool.mypy]
python_version      = "3.10"
ignore_missing_imports = true
